--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
 @media (min-width: 1200px) {
   .container, .container-sm, .container-md, .container-lg, .container-xl {
     max-width: 1280px; } }
+.container {
+  max-width: 1280px; }
